#3 Map API 가져오기 Fixes #3

--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>test</h1>
+  <div id="map" style="width: 100%; height: 400px;"></div>
+  <script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=mo795feswb"></script>
+  <script src="/static/js/script.js"></script>
 </body>
 </html>
