랜덤위치js 파일 스크립트 src설정

--- a/static/index.html
+++ b/static/index.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="/static/css/indexStyle.css">
 </head>
 <body>
   <div id="map" style="width: 100%; height: 400px;"></div>
   <script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=mo795feswb"></script>
   <script src="/static/js/script.js"></script>
+  <script src="/static/js/random.js"></script>
 </body>
 </html>
