--- a/static/index.html
+++ b/static/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
-  <div id="map" style="width: 100%; height: 400px;"></div>
+  <div id="map"></div>
   <script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=mo795feswb"></script>
   <script src="/static/js/script.js"></script>
 </body>
