랜덤 위치 이동 버튼 생성

--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div id="map" style="width: 100%; height: 400px;"></div>
+  <button id="randomLocationBtn">랜덤 위치로 이동</button>
   <script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=mo795feswb"></script>
   <script src="/static/js/script.js"></script>
   <script src="/static/js/random.js"></script>
