--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="map"></div>
   <button id="randomLocationBtn">랜덤 위치로 이동</button>
-  <button id="randomCityButton">도시 랜덤 위치로 이동</button>
+  <button id="randomCityButton">지역 랜덤 위치로 이동</button>
   <script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=mo795feswb"></script>
   <script src="/static/js/script.js"></script>
   <script src="/static/js/random.js"></script>
