--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,6 @@
   <script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=mo795feswb"></script>
   <script src="/static/js/script.js"></script>
   <script src="/static/js/random.js"></script>
-  
+  <script src="/static/js/daejeonRandom.js"></script>
 </body>
 </html>
