randomDaejeonBtn 아이디 가져오기

--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,7 @@
 <body>
   <div id="map"></div>
   <button id="randomLocationBtn">랜덤 위치로 이동</button>
+  <button id="randomDaejeonBtn">랜덤 대전 위치로 이동</button>
   <script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=mo795feswb"></script>
   <script src="/static/js/script.js"></script>
   <script src="/static/js/random.js"></script>
