--- a/static/test.html
+++ b/static/test.html
@@ -10,7 +10,6 @@
   <div id="map"></div>
   <button id="randomLocationBtn">랜덤 위치로 이동</button>
   <button id="nextCityBtn">다음 도시로 이동</button>
-  <script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=mo795feswb"></script>
-  <script src="/static/js/script.js"></script>
+  <script src="/static/js/mapClientId.js"></script>
 </body>
 </html>
