--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,6 @@
   <button id="randomLocationBtn">랜덤 위치로 이동</button>
   <button id="nextCityBtn">다음 도시로 이동</button>
   <script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=mo795feswb"></script>
-  <script src="/static/js/script.js"></script>
+  <script type="module" src="/static/js/script.js"></script>
 </body>
 </html>
