--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,6 @@
   <div id="map"></div>
   <button id="randomLocationBtn">랜덤 위치로 이동</button>
   <button id="nextCityBtn">다음 도시로 이동</button>
-  <script type="module" src="/static/js/script3.js"></script>
+  <script type="module" src="/static/js/script-c.js"></script>
 </body>
 </html>
