--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="map"></div>
-  <div id="text"></div>
+  <div id="text">이곳은 서울입니다.</div>
   <button id="randomLocationBtn">랜덤 위치로 이동</button>
   <button id="nextCityBtn">다음 도시로 이동</button>
   <script type="module" src="/static/js/script-c.js"></script>
