--- a/static/index.html
+++ b/static/index.html
@@ -13,6 +13,7 @@
     <div id="text">"어서오세요! 이곳은 서울입니다."</div>
     <button id="randomLocationBtn">랜덤 위치로 이동</button>
     <button id="nextCityBtn">다음 도시로 이동</button>
+    <button id="randomCityBtn">다음 도시를 랜덤 이동</button>
   </div>
   <script type="module" src="/static/js/script-c.js"></script>
 </body>
